# koester_models

./: .gitignore  MANIFEST.in  interp.ipynb  pyproject.toml
DA/: da03000_700.dk  da03000_750.dk  da03000_775.dk  da03000_850.dk  da03000_875.dk  da03000_925.dk  da03000_950.dk  da03000_975.dk  da03250_700.dk  da03250_725.dk  da03250_750.dk  da03250_800.dk  da03250_825.dk  da03250_925.dk  da03250_950.dk  da03250_975.dk  da03500_750.dk  da03500_800.dk  da03500_850.dk  da03500_875.dk  da03500_950.dk  da03500_975.dk  da03750_700.dk  da03750_725.dk  da03750_775.dk  da03750_850.dk  da03750_925.dk  da03750_975.dk  da04000_725.dk  da04000_750.dk  da04000_825.dk  da04000_850.dk  da04000_925.dk  da04000_950.dk  da04000_975.dk  da04250_725.dk  da04250_775.dk  da04250_850.dk  da04250_875.dk  da04250_900.dk  (+553 more)
DB/: db03000_725.dk  db03000_750.dk  db03000_800.dk  db03000_850.dk  db03000_900.dk  db03000_925.dk  db03000_950.dk  db03000_975.dk  db03250_725.dk  db03250_750.dk  db03250_825.dk  db03250_900.dk  db03250_925.dk  db03500_700.dk  db03500_725.dk  db03500_775.dk  db03500_800.dk  db03500_825.dk  db03500_850.dk  db03500_875.dk  db03500_950.dk  db03500_975.dk  db03750_700.dk  db03750_750.dk  db03750_775.dk  db03750_800.dk  db03750_825.dk  db03750_875.dk  db03750_925.dk  db03750_975.dk  db04000_700.dk  db04000_750.dk  db04000_775.dk  db04000_850.dk  db04000_875.dk  db04000_950.dk  db04250_725.dk  db04250_850.dk  db04250_900.dk  db04500_750.dk  (+499 more)
ELM/: da03000_525.dk  da03000_600.dk  da03000_650.dk  da03250_500.dk  da03250_525.dk  da03250_625.dk  da03250_650.dk  da03500_500.dk  (+382 more)
(+1337 files in other folders)
