[build-system]
requires = ["setuptools>=61.0", "numpy", "scipy"]
build-backend = "setuptools.build_meta"

[project]
name = "koester"
version = "1.0"
authors = [
  { name="Stefan Arseneau", email="arseneau@bu.edu"}
]
description = "koester WD model interpolator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/stefanarseneau/koester_models"
Issues = "https://github.com/stefanarseneau/koester_models/issues"
